--- a/platformio.ini
+++ b/platformio.ini
@@ -12,3 +12,6 @@
 platform = atmelavr
 board = uno
 framework = arduino
+lib_deps = 
+	adafruit/RTClib@^1.14.1
+	adafruit/SD@0.0.0-alpha+sha.041f788250
